src/bundle/Resources/public/scss/_content-type-edit.scss
.ibexa-available-field-types {
    @include sidebar-drag-items();

    & {
        min-height: calculateRem(700px);
        max-height: calc(100vh - #{calculateRem(200px)});
        margin-left: calculateRem(32px);
    }
}

.ibexa-available-field-type {
    @include sidebar-drag-item;
}

.ibexa-content-type-edit {
    &__sections {
        padding: 0;
    }

    &__section {
        display: flex;
        flex-wrap: wrap;
        margin: 0 0 calculateRem(36px) 0;

        &--one-column-layout {
            .ibexa-content-type-edit__section-column {
                &--left-col {
                    width: 100%;
                }
            }
        }
    }

    &__section-column {
        &--left-col {
            width: 60%;
        }

        &--right-col {
            width: 40%;
        }
    }

    &__section-column-header {
        margin-bottom: calculateRem(24px);

        &--seo {
            margin-top: calculateRem(36px);
        }
    }

    &__section-column-body {
        .form-check {
            margin-top: calculateRem(16px);

            .ibexa-label {
                margin-bottom: 0;
            }
        }
    }

    &__section-column {
        padding: 0;

        &--available-fields {
            .ibexa-content-type-edit__section-column-body {
                position: sticky;
                top: calculateRem(-34px);
            }
        }

        &--field-definitions,
        &--assigned-attributes {
            min-height: calculateRem(700px);
            padding: calculateRem(16px) calculateRem(34px);
            background: $ibexa-color-light-300;
            border-radius: $ibexa-border-radius;

            .ibexa-content-type-edit__section-column-header {
                margin-top: 0;
                margin-bottom: calculateRem(17px);
            }
        }

        .ibexa-collapse {
            &--field-definitions-group {
                margin-bottom: calculateRem(22px);
                border-radius: $ibexa-border-radius;

                &.ibexa-collapse--hidden {
                    margin: 0;
                }

                .ibexa-collapse {
                    &__header {
                        padding: 0 calculateRem(12px);

                        .ibexa-btn {
                            padding: calculateRem(10px);
                        }
                    }

                    &__body-content {
                        padding: 0 calculateRem(24px) calculateRem(20px);
                        min-height: calculateRem(410px);
                    }
                }
            }

            &--active-field-definitions-group {
                border: calculateRem(1px) solid $ibexa-color-info;
            }

            &--field-definition {
                position: relative;
                margin-bottom: calculateRem(12px);
                border-radius: $ibexa-border-radius;
                border: calculateRem(1px) solid $ibexa-color-light;
                box-shadow: $ibexa-content-type-edit-field-shadow;

                &:hover {
                    border-color: $ibexa-color-dark;

                    .ibexa-collapse__draggable-btn .ibexa-icon {
                        fill: $ibexa-color-dark;
                    }
                }

                .ibexa-collapse {
                    &__header {
                        box-shadow: $ibexa-content-type-edit-field-shadow;
                        border-radius: $ibexa-border-radius;
                        border-bottom: calculateRem(1px) solid $ibexa-color-light;

                        .ibexa-btn {
                            padding: calculateRem(10px);
                        }
                    }

                    &__header-label {
                        font-size: $ibexa-text-font-size !important;
                        font-weight: normal;
                        line-height: calculateRem(22px);
                    }

                    &__toggle--status {
                        margin-left: 0;
                    }

                    &__toggle-btn,
                    &__extra-action-button {
                        &:hover {
                            .ibexa-icon {
                                fill: $ibexa-color-primary;
                            }
                        }

                        &--remove-field-definitions {
                            margin-left: auto;
                        }
                    }

                    &__toggle-btn:not(.ibexa-collapse__toggle-btn--status) {
                        cursor: grab;
                        margin-right: auto;
                    }

                    &__draggable-btn {
                        cursor: grab;

                        .ibexa-icon {
                            fill: $ibexa-color-light;
                        }
                    }
                }

                &.ibexa-collapse {
                    &[draggable='true'] {
                        .ibexa-collapse {
                            &__header {
                                &:hover {
                                    cursor: grab;
                                }
                            }

                            &__toggle-btn:not(.ibexa-collapse__toggle-btn--status) {
                                cursor: grab;
                            }
                        }
                    }
                }
            }

            &--field-definition-removing {
                border-color: $ibexa-color-light-300;
                animation: field-remove-pulse 0.2s 1;
                transform-origin: center;
                pointer-events: none;

                &:hover {
                    border-color: $ibexa-color-light-300;
                }

                .ibexa-collapse__header {
                    background-color: $ibexa-color-light-300;
                }

                .ibexa-collapse__header-label {
                    color: $ibexa-color-light-500;
                }

                .ibexa-collapse__draggable-btn .ibexa-icon,
                .ibexa-icon {
                    fill: $ibexa-color-light-500;
                }
            }

            &--field-definition-remove-animation {
                animation: remove-field 1s 1;
            }

            &--field-definition-loading {
                animation: field-add-pulse 1s 1;
                pointer-events: none;
            }

            &--field-definition-highlighted {
                border-color: $ibexa-color-info;

                .ibexa-collapse__header {
                    background-color: $ibexa-color-info-100;
                }

                .ibexa-collapse__header-label {
                    color: $ibexa-color-info;
                }

                .ibexa-collapse__draggable-btn .ibexa-icon,
                .ibexa-icon {
                    fill: $ibexa-color-info;
                }
            }

            &--field-definition-error {
                border-color: $ibexa-color-danger;

                .ibexa-collapse__header {
                    background-color: $ibexa-color-danger-100;
                }

                .ibexa-collapse__header-label {
                    color: $ibexa-color-danger;
                }

                .ibexa-collapse__draggable-btn .ibexa-icon,
                .ibexa-icon {
                    fill: $ibexa-color-danger;
                }
            }

            &--field-definition.ibexa-collapse--collapsed {
                .ibexa-collapse__header {
                    border-bottom: none;
                    box-shadow: none;
                }
            }
        }

        .ibexa-popup-menu {
            top: calculateRem(70px);
        }
    }

    &__field-definition-content {
        padding: calculateRem(20px);
    }

    &__add-field-definitions-group {
        display: flex;
        justify-content: center;
        align-items: center;
        position: relative;
        height: calculateRem(80px);
        margin-bottom: calculateRem(24px);
        border: calculateRem(1px) dashed $ibexa-color-light-600;
        border-radius: $ibexa-border-radius;
    }

    &__add-field-definitions-group-btn {
        min-width: calculateRem(210px);
        justify-content: center;
    }

    &__empty-group-image {
        margin: calculateRem(32px) auto calculateRem(48px);
    }

    &__empty-group-label {
        color: $ibexa-color-dark-400;
        margin-bottom: calculateRem(16px);
    }

    &__field-settings-group {
        display: flex;
        flex-wrap: nowrap;
        justify-content: space-between;
    }

    &__field-settings-field + &__field-settings-field {
        margin-left: calculateRem(35px);
    }

    &__notice {
        color: $ibexa-color-dark-400;
        font-weight: normal;
        font-family: $ibexa-font-family;
        font-size: $ibexa-text-font-size-small;
        line-height: calculateRem(32px);
    }

    &__notice-icon {
        fill: $ibexa-color-dark-400;
        margin-right: calculateRem(8px);
    }
}

.ibexa-field-definitions-placeholder {
    @include drag-item-placeholder;
}

.ibexa-field-definitions-placeholder-full {
    @include drag-item-placeholder-full;
}

.ibexa-field-definitions-empty-group {
    @include empty-drop-zone;
}

@keyframes remove-field {
    100% {
        height: 0;
        margin-bottom: 0;
        opacity: 0;
        transform: scale(0);
    }
}

@keyframes field-remove-pulse {
    0% {
        border-color: $ibexa-color-light-300;
        box-shadow: 0 0 0 0 $ibexa-color-light-300;
    }
    10% {
        border-color: $ibexa-color-light-300;
        box-shadow: 0 0 0 0 $ibexa-color-light-300;
    }
    20% {
        border-color: $ibexa-color-light-300;
        box-shadow: 0 0 0 calculateRem(10px) $ibexa-color-light-300;
    }
    100% {
        border-color: $ibexa-color-light-300;
        box-shadow: 0 0 0 0 $ibexa-color-light-300;
    }
}

@keyframes field-add-pulse {
    0% {
        border-color: $ibexa-color-info-100;
        box-shadow: 0 0 0 0 $ibexa-color-info-100;
    }
    10% {
        border-color: $ibexa-color-info-100;
        box-shadow: 0 0 0 0 $ibexa-color-info-100;
    }
    20% {
        border-color: $ibexa-color-info-100;
        box-shadow: 0 0 0 calculateRem(10px) $ibexa-color-info-100;
    }
    100% {
        border-color: $ibexa-color-info-100;
        box-shadow: 0 0 0 0 $ibexa-color-info-100;
    }
}

